# GOT

./: README.md
API/: package-lock.json  package.json
API/server/: server.js
ConsoleAppTests/: Archivo1.txt  Archivo2.txt  Doxyfile  Huffman.cpp  Manager.cpp  Manager.h  examplecopy.txt  gotignore.txt  help.txt  main  main.cpp  utility.sql
Doxygen/html/: _archivo1_8txt.html  _archivo2_8txt.html  _huffman_8cpp.html  _manager_8cpp.html  _manager_8h.html  _manager_8h_source.html  _server_file_8txt.html  annotated.html  class_m_d5-members.html  class_m_d5.html  class_manager-members.html  class_manager.html  classes.html  example_8txt.html  examplecopy_8txt.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  gotignore_8txt.html  help_8txt.html  index.html  main_8cpp.html  md5_8cpp.html  md5_8h.html  md5_8h_source.html  menudata.js  struct_min_heap_node-members.html  struct_min_heap_node.html  structcompare-members.html  structcompare.html
HTTP test/: CMakeLists.txt  main.cpp
Querys_BaseDatos/: Creacion_base_tablas.sql  CrearBase_CrearTablas.sql  GOTprocedures.sql  asig_ForeingKey.sql  poblacion_prueba.sql
Request C++/: CMakeLists.txt  main.cpp  package-lock.json
Request C++ (copy)/: Archivo1.txt  Archivo2.txt  Archivo3.txt  Manager.cpp  Manager.h  ServerFile.txt  example.txt  gotignore.txt  help.txt  main.cpp  package.json
Request C++/server/: server.js
Request C++/server/db/: index.js
Request C++/server/routes/: index.js
(+66 files in other folders)
